--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,31 @@
+2007-11-15  Edward Hervey  <bilboed@bilboed.com>
+
+	* Makefile.am:
+	* autogen.sh:
+	* configure.ac:
+	* ext/ffmpeg/Makefile.am:
+	* ffmpegrev:
+	* gst-libs/ext/Makefile.am:
+	Initial patch of the new mirror-less build-system for gst-ffmpeg using
+	specific revisions of ffmpeg svn instead.
+	Might still have some issues, we need people to try this.
+	Help by : Dejan Sakelšak  <sakdean at gmail dot com>
+	* ext/ffmpeg/gstffmpeg.c: (plugin_init):
+	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
+	(gst_ffmpeg_caps_with_codecid), (gst_ffmpeg_caps_to_codecid),
+	(gst_ffmpeg_get_codecid_longname):
+	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_base_init),
+	(gst_ffmpegdec_get_buffer), (gst_ffmpegdec_audio_frame),
+	(gst_ffmpegdec_register):
+	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_averror),
+	(gst_ffmpegdemux_register):
+	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_register):
+	* ext/ffmpeg/gstffmpegmux.c: (gst_ffmpegmux_register):
+	Update code for new ffmpeg API.
+
 2007-11-08  Edward Hervey  <bilboed@bilboed.com>
 
-	Patch by: Ole André Vadla Ravnås <ole dot andre dot ravnas at tandberg dot com>
+	Patch by: Ole AndrÃ© Vadla RavnÃ¥s <ole dot andre dot ravnas at tandberg dot com>
 
 	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_caps_with_codecid):
 	* ext/ffmpeg/gstffmpegmux.c: (gst_ffmpegmux_init):
@@ -30,7 +55,7 @@
 	(gst_ffmpegdata_close):
 	gst-indent cleanup.
 
-2007-10-12  Tim-Philipp Müller  <tim at centricular dot net>
+2007-10-12  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* configure.ac:
 	  Add big fat warning message with explanation when building
@@ -217,7 +242,7 @@
 	Be a bit smarter when clipping the frame without a duration, we don't
 	want the frame to extend to the end of the segment in this case.
 
-2007-05-24  Tim-Philipp Müller  <tim at centricular dot net>
+2007-05-24  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* configure.ac:
 	  Add -no-undefined to GST_ALL_LDFLAGS; without it, no shared libs
@@ -308,12 +333,12 @@
 	Renamed the mpeg4 category to mpeg.
 	Fixes #403739
 
-2007-03-01  Sebastian Dröge  <slomo@circular-chaos.org>
+2007-03-01  Sebastian DrÃ¶ge  <slomo@circular-chaos.org>
 
 	* configure.ac:
 	  Convert to new AG_GST style.
 
-2007-02-16  Tim-Philipp Müller  <tim at centricular dot net>
+2007-02-16  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_base_init),
 	(gst_ffmpegdec_register):
@@ -344,7 +369,7 @@
 	  My console is not your TODO list.
 	  If it were your TODO list, you would have DONE it by now.
 
-2007-02-09  Tim-Philipp Müller  <tim at centricular dot net>
+2007-02-09  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegmux.c: (gst_ffmpegmux_register):
 	  ffmux_flv only accepts mpeg audio with a sample rate of 44100, 22050
@@ -352,7 +377,7 @@
 	  that encoding piplines at least have a chance to automatically
 	  negotiate to one of the allowed rates.
 
-2007-02-09  Tim-Philipp Müller  <tim at centricular dot net>
+2007-02-09  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegmux.c: (gst_ffmpegmux_request_new_pad),
 	(gst_ffmpegmux_setcaps), (gst_ffmpegmux_collected):
@@ -372,7 +397,7 @@
 	register yuv4mpegpipe demuxer with MARGINAL rank to
 	make it also typically available for auto-plugging. Fixes #399108.
 
-2007-01-22  Tim-Philipp Müller  <tim at centricular dot net>
+2007-01-22  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	Patch by: Martin Szulecki  <gnomebugzilla at sukimashita com>
 
@@ -436,7 +461,7 @@
 	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_me_method_get_type):
 	Make the name of the motion-estimation method enum values meaningful.
 
-2007-01-07  Sébastien Moutte  <sebastien@moutte.net>
+2007-01-07  SÃ©bastien Moutte  <sebastien@moutte.net>
 	
 	* Makefile.am:
 	  Add win32/MANIFEST to EXTRA_DIST so win32 files will
@@ -456,7 +481,7 @@
 	  add a dep on the internal lib so the plugin gets rebuilt on
 	  code changes to the ffmpeg lib
 
-2007-01-03  Tim-Philipp Müller  <tim at centricular dot net>
+2007-01-03  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_class_init),
 	(gst_ffmpegenc_finalize):
@@ -464,7 +489,7 @@
 	  and potential crashes caused by them in some circumstances.
 	  Fixes #392395.
 
-2006-12-21  Tim-Philipp Müller  <tim at centricular dot net>
+2006-12-21  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_caps_to_smpfmt):
 	  The "signed" field in raw audio caps is of boolean type, trying to
@@ -475,7 +500,7 @@
 	* configure.ac:
 	  fix quoting so it works for fedora autotools too
 
-2006-12-15  Tim-Philipp Müller  <tim at centricular dot net>
+2006-12-15  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* docs/Makefile.am:
 	* tests/check/Makefile.am:
@@ -689,7 +714,7 @@
 	end up passing completely bogus data to the AVCodecContext.
 	Fixes #355584
 
-2006-10-05  Tim-Philipp Müller  <tim at centricular dot net>
+2006-10-05  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_get_stream):
 	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_setcaps):
@@ -733,7 +758,7 @@
 	gst-plugins-* alternative, to figure out which ones can move to
 	RANK_MARGINAL too.
 
-2006-09-29  Tim-Philipp Müller  <tim at centricular dot net>
+2006-09-29  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_register):
 	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_register):
@@ -1002,20 +1027,20 @@
 	* configure.ac:
 	  fix test by finding base plugins
 
-2006-05-09  Tim-Philipp Müller  <tim at centricular dot net>
+2006-05-09  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* tests/check/gst-ffmpeg.supp:
 	  Add missing file (which prepare-ChangeLog didn't pick up
 	  because it's empty).
 
-2006-05-09  Tim-Philipp Müller  <tim at centricular dot net>
+2006-05-09  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* tests/check/generic/libavcodec-locking.c: (GST_START_TEST),
 	(simple_launch_lines_suite), (main):
 	  Only run test when encoder element is available (we might
 	  have been configured with --disable-encoders).
 
-2006-05-09  Tim-Philipp Müller  <tim at centricular dot net>
+2006-05-09  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	Patch by: Luca Ognibene  <luogni at tin dot it>
 
@@ -1025,7 +1050,7 @@
 	(main):
 	  Add test case for libavcodec locking
 
-2006-05-09  Tim-Philipp Müller  <tim at centricular dot net>
+2006-05-09  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* Makefile.am:
 	* configure.ac:
@@ -1064,7 +1089,7 @@
 	Refresh patches to incorporate MikeS' automake 1.9 changes from a
 	while back.
 
-2006-05-02  Tim-Philipp Müller  <tim at centricular dot net>
+2006-05-02  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_register):
 	  Give ffmpeg demuxers a rank of NONE for the time being, so that
@@ -1171,7 +1196,7 @@
 	refactor some functions. Use GstSegment.
 	Implement simple QOS by using the ffmpeg hurry_up field.
 
-2006-04-06  Tim-Philipp Müller  <tim at centricular dot net>
+2006-04-06  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_register):
 	  Register id3 demuxer, avi demuxer and ogg demuxer with
@@ -1216,7 +1241,7 @@
 	lock themselves. This fixes a deadlock when 
 	_open fails.
 
-2006-03-14  Tim-Philipp Müller  <tim at centricular dot net>
+2006-03-14  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_frame):
 	  Don't use gst_pad_alloc_buffer() for frames with palette,
@@ -1266,7 +1291,7 @@
 	Fix segmentation fault and memleak.
 	Fixes #332995 and #333001
 
-2006-02-24  Tim-Philipp Müller  <tim at centricular dot net>
+2006-02-24  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_frame):
 	  ... can't adjust buffer size of NULL buffers though
@@ -1278,7 +1303,7 @@
 	* gst-libs/ext/ffmpeg/autogen.sh:
 	  Allow automake 1.9
 
-2006-02-24  Tim-Philipp Müller  <tim at centricular dot net>
+2006-02-24  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_get_palette),
 	(gst_ffmpeg_set_palette):
@@ -1422,7 +1447,7 @@
 	  This allows playback of h263/3gp files taking fps from the demuxer,
 	  which before always set GST_CLOCK_TIME_NONE as timestamp.
 
-2006-02-04  Tim-Philipp Müller  <tim at centricular dot net>
+2006-02-04  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_get_palette):
 	  Buffers aren't boxed types any longer.
@@ -1471,7 +1496,7 @@
 	* docs/version.entities.in:
 	  First step at adding docs
 
-2006-01-26  Tim-Philipp Müller  <tim at centricular dot net>
+2006-01-26  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_caps_with_codecid):
 	  Pad codec data buffer to a size that is a multiple of 16, which
@@ -1524,7 +1549,7 @@
 
 	* libavcodec/utils.c: Fix for CVE-2005-4048 (bugzilla bug
 	#324209), buffer overflow with small PNG images with palettes.
-	Patch by: Loïc Minier <lool+gnome at via.ecp.fr>
+	Patch by: LoÃ¯c Minier <lool+gnome at via.ecp.fr>
 
 	* libavutil/Makefile.am (INCLUDES): Add ALTIVEC_CFLAGS here, fixes
 	compilation on ppc (#320238).
@@ -1542,7 +1567,7 @@
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_frame):
 	Finer grained keyframe detection
 
-2005-12-16  Tim-Philipp Müller  <tim at centricular dot net>
+2005-12-16  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	Patch by: Sebastien Cote
 	Patch by: Luca Ognibene
@@ -1557,7 +1582,7 @@
 	  Do proper locking around avcodec_open() and avcodec_close()
 	  (fixes #322254)
 
-2005-12-10  Tim-Philipp Müller  <tim at centricular dot net>
+2005-12-10  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* gst-libs/ext/Makefile.am:
 	  We need to use $(MAKE) here instead of 'make' (on some
@@ -1625,7 +1650,7 @@
 	(gst_ffmpegenc_setcaps), (gst_ffmpegenc_set_property),
 	(gst_ffmpegenc_get_property): Add rtp-payload-size property.
 
-2005-11-28  Tim-Philipp Müller  <tim at centricular dot net>
+2005-11-28  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_close),
 	(gst_ffmpegdec_setcaps), (gst_ffmpegdec_add_pixel_aspect_ratio),
@@ -1677,7 +1702,7 @@
 	* ext/ffmpeg/gstffmpegdec.c (gst_ffmpegdec_sink_event): Run
 	update-funcnames.
 
-2005-11-21  Tim-Philipp Müller  <tim at centricular dot net>
+2005-11-21  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_sink_event):
 	  Remove GST_STREAM_LOCK here, it is not needed any longer.
@@ -1703,7 +1728,7 @@
 	* configure.ac (GST_PLUGIN_LDFLAGS): -no-undefined for better
 	debugging, allows dll builds on windows. Fixes #316076.
 
-2005-11-14  Tim-Philipp Müller  <tim at centricular dot net>
+2005-11-14  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_frame),
 	(gst_ffmpegdec_sink_event):
@@ -1735,7 +1760,7 @@
 	* TODO:
 	  Add some TODO items for 0.9 cycle.
 
-2005-10-26  Tim-Philipp Müller  <tim at centricular dot net>
+2005-10-26  Tim-Philipp MÃ¼ller  <tim at centricular dot net>
 
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_init),
 	(gst_ffmpegdec_close), (gst_ffmpegdec_open),
@@ -2335,7 +2360,7 @@
 2005-02-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_frame):
-	  Don´t SIGFPE right away.
+	  DonÂ´t SIGFPE right away.
 
 2005-01-31  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
@@ -3021,7 +3046,7 @@
 	* configure.ac:
 	  fix --export-symblos-regex to a working regex.
 
-2004-04-03  Tim-Philipp Müller <t.i.m@zen.co.uk>
+2004-04-03  Tim-Philipp MÃ¼ller <t.i.m@zen.co.uk>
 
 	reviewed by: David Schleef  <ds@schleef.org>
 
